tests/snapshots/codegen__.__test__pointer_neg.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int x[2]; x[1]=5; *(&x[0]-(-1)); }) => 5\nOK\n"
status: 0
