tests/snapshots/codegen__.__test__predefined_macros.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "__STDC__ => 1\n__STDC_HOSTED__ => 1\n__STDC_VERSION__ => 201112\n__STDC_UTF_16__ => 1\n__STDC_UTF_32__ => 1\n__STDC_IEC_559__ => 1\n__STDC_NO_COMPLEX__ => 1\nsizeof(__CHAR16_TYPE__) => 2\nsizeof(__CHAR32_TYPE__) => 4\nOK\n"
status: 0
