tests/snapshots/codegen__.__test__string.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "\"\"[0] => 0\nsizeof(\"\") => 1\n\"abc\"[0] => 97\n\"abc\"[1] => 98\n\"abc\"[2] => 99\n\"abc\"[3] => 0\nsizeof(\"abc\") => 4\n\"\\a\"[0] => 7\n\"\\b\"[0] => 8\n\"\\t\"[0] => 9\n\"\\n\"[0] => 10\n\"\\v\"[0] => 11\n\"\\f\"[0] => 12\n\"\\r\"[0] => 13\n\"\\e\"[0] => 27\n\"\\j\"[0] => 106\n\"\\k\"[0] => 107\n\"\\l\"[0] => 108\n\"\\ax\\ny\"[0] => 7\n\"\\ax\\ny\"[1] => 120\n\"\\ax\\ny\"[2] => 10\n\"\\ax\\ny\"[3] => 121\n\"\\0\"[0] => 0\n\"\\20\"[0] => 16\n\"\\101\"[0] => 65\n\"\\1500\"[0] => 104\n\"\\x00\"[0] => 0\n\"\\x77\"[0] => 119\nsizeof(\"abc\" \"def\") => 7\nsizeof(\"abc\" \"d\" \"efgh\") => 9\nstrcmp(\"abc\" \"d\" \"\\nefgh\", \"abcd\\nefgh\") => 0\n!strcmp(\"abc\" \"d\", \"abcd\\nefgh\") => 0\nstrcmp(\"\\x9\" \"0\", \"\\t0\") => 0\nOK\n"
status: 0
