tests/snapshots/codegen__.__test__struct.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ struct {int a; int b;} x; x.a=1; x.b=2; x.a; }) => 1\n({ struct {int a; int b;} x; x.a=1; x.b=2; x.b; }) => 2\n({ struct {char a; int b; char c;} x; x.a=1; x.b=2; x.c=3; x.a; }) => 1\n({ struct {char a; int b; char c;} x; x.b=1; x.b=2; x.c=3; x.b; }) => 2\n({ struct {char a; int b; char c;} x; x.a=1; x.b=2; x.c=3; x.c; }) => 3\n({ struct {char a; char b;} x[3]; char *p=x; p[0]=0; x[0].a; }) => 0\n({ struct {char a; char b;} x[3]; char *p=x; p[1]=1; x[0].b; }) => 1\n({ struct {char a; char b;} x[3]; char *p=x; p[2]=2; x[1].a; }) => 2\n({ struct {char a; char b;} x[3]; char *p=x; p[3]=3; x[1].b; }) => 3\n({ struct {char a[3]; char b[5];} x; char *p=&x; x.a[0]=6; p[0]; }) => 6\n({ struct {char a[3]; char b[5];} x; char *p=&x; x.b[0]=7; p[3]; }) => 7\n({ struct { struct { char b; } a; } x; x.a.b=6; x.a.b; }) => 6\n({ struct {int a;} x; sizeof(x); }) => 4\n({ struct {int a; int b;} x; sizeof(x); }) => 8\n({ struct {int a, b;} x; sizeof(x); }) => 8\n({ struct {int a[3];} x; sizeof(x); }) => 12\n({ struct {int a;} x[4]; sizeof(x); }) => 16\n({ struct {int a[3];} x[2]; sizeof(x); }) => 24\n({ struct {char a; char b;} x; sizeof(x); }) => 2\n({ struct {} x; sizeof(x); }) => 0\n({ struct {char a; int b;} x; sizeof(x); }) => 8\n({ struct {int a; char b;} x; sizeof(x); }) => 8\n({ struct t {int a; int b;} x; struct t y; sizeof(y); }) => 8\n({ struct t {int a; int b;}; struct t y; sizeof(y); }) => 8\n({ struct t {char a[2];}; { struct t {char a[4];}; } struct t y; sizeof(y); }) => 2\n({ struct t {int x;}; int t=1; struct t y; y.x=2; t+y.x; }) => 3\n({ struct t {char a;} x; struct t *y = &x; x.a=3; y->a; }) => 3\n({ struct t {char a;} x; struct t *y = &x; y->a=3; x.a; }) => 3\n({ struct {int a,b;} x,y; x.a=3; y=x; y.a; }) => 3\n({ struct t {int a,b;}; struct t x; x.a=7; struct t y; struct t *z=&y; *z=x; y.a; }) => 7\n({ struct t {int a,b;}; struct t x; x.a=7; struct t y, *p=&x, *q=&y; *q=*p; y.a; }) => 7\n({ struct t {char a, b;} x, y; x.a=5; y=x; y.a; }) => 5\n({ struct {int a,b;} x,y; x.a=3; y=x; y.a; }) => 3\n({ struct t {int a,b;}; struct t x; x.a=7; struct t y; struct t *z=&y; *z=x; y.a; }) => 7\n({ struct t {int a,b;}; struct t x; x.a=7; struct t y, *p=&x, *q=&y; *q=*p; y.a; }) => 7\n({ struct t {char a, b;} x, y; x.a=5; y=x; y.a; }) => 5\n({ struct {char a; long b;} x; sizeof(x); }) => 16\n({ struct {char a; short b;} x; sizeof(x); }) => 4\nOK\n"
status: 0
