tests/snapshots/codegen__.__test__union.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ union { int a; char b[6]; } x; sizeof(x); }) => 8\n({ union { int a; char b[4]; } x; x.a = 515; x.b[0]; }) => 3\n({ union { int a; char b[4]; } x; x.a = 515; x.b[1]; }) => 2\n({ union { int a; char b[4]; } x; x.a = 515; x.b[2]; }) => 0\n({ union { int a; char b[4]; } x; x.a = 515; x.b[3]; }) => 0\nOK\n"
status: 0
